--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="jumbotron">
       <div class="container text-center">
-        <img class="babylon-logo" src="imgs/logo.png" alt="Babylon German Lager">
+        <img class="babylon-logo" src="imgs/logo.jpg" alt="Babylon German Lager">
         
         <div class="chamada">
           <p>Site em construção</p>
