--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Cerveja Babylon - Feita em Pernambuco</title>
+    <meta name="description" content="A Babylon é uma cervejaria que nasceu para resgatar a tradição das grandes escolas cervejeiras do mundo. Visamos criar cervejas de estilos clássicos, mundialmente famosos, unindo um mestre cervejeiro com experiência em grandes cervejarias com a inovação e criatividade de cervejeiros de panela.">
+    <meta name="keywords" content="cerveja artesanal, cervejaria artesanal pernambucana, cervejaria artesanal recifense, babylon german lager, micro-cervejaria recifense, micro-cervejaria pernambucana, recife, babylon, german, lager">
+
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -21,15 +24,30 @@
     <meta name="google-site-verification" content="bKx61fiqLlx4O6raDcq7kVpcibSW6uEIFXPuVh_isrw" />
   </head>
   <body>
-    <div class="jumbotron">
+    <div class="jumbotron mb-40">
       <div class="container text-center">
         <img class="babylon-logo" src="imgs/logo.jpg" alt="Babylon German Lager">
         
         <div class="chamada">
-          <p>Site em construção</p>
+          <h2>Cerveja Babylon</h2>
+          <i>Tradição & inovação</i>
         </div>
       </div>
     </div>
+
+    <div class="container mb-40">
+      <p>
+        A Babylon é uma cervejaria que nasceu para resgatar a tradição das grandes escolas cervejeiras do mundo. Visamos criar cervejas de estilos clássicos, mundialmente famosos, unindo um mestre cervejeiro com experiência em grandes cervejarias com a inovação e criatividade de cervejeiros de panela.
+      </p>
+
+      <p>
+        O primeiro fruto desta parceria é a Babylon German Lager que está sendo apresentada oficialmente ao público hoje. Esta cerveja homenageia a escola alemã, possui que uma coloração dourada vibrante, espuma cremosa e persistente. Como uma boa alemã, percebemos notas florais e herbais no seu aroma, provenientes dos lúpulos nobres alemães. No primeiro gole, é sentido um corpo leve, porém perceptível, e o baixo teor de álcool (5%) a torna uma cerveja com grande "drinkability".
+      </p>
+      <p>
+        Em breve, a Babylon German Lager será encontrada em chope (não pasteurizado) e em garrafas de 600ml (pasteurizadas) nas casas especializadas em cervejas especiais e também em bares e restaurantes. Esperamos que nossa cerveja agrade ao seu paladar e estamos à disposição para contatos no evento de lançamento e através das nossas redes sociais.
+      </p>
+    </div>
+    <hr class="hr-small">
 
     <div class="container">
       <footer class="text-center">
