fix bg and links

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/fa-snapchat.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
     <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,300|Bitter:400italic' rel='stylesheet' type='text/css'> -->
 
@@ -26,7 +28,7 @@
   <body>
     <div class="jumbotron mb-40">
       <div class="container text-center">
-        <img class="babylon-logo" src="imgs/logo.jpg" alt="Babylon German Lager">
+        <img class="babylon-logo" src="imgs/logo.png" alt="Babylon German Lager">
         
         <div class="chamada">
           <h2>Cerveja Babylon</h2>
@@ -51,6 +53,25 @@
 
     <div class="container">
       <footer class="text-center">
+        
+        <ul class="social-links">
+          <a target="_blank" href="https://instagram.com/cervejababylon">
+            <li><i class="fa fa-instagram"></i><br>Curta</li>
+          </a>
+          <a target="_blank" href="https://snapchat.com/add/cervejababylon">
+            <li><i class="fa fa-snapchat"></i><br>Acompanhe</li>
+          </a>
+          <a target="_blank" href="https://untappd.com/cervejababylon">
+            <li><i class="fa fa-beer"></i><br>Brinde</li>
+          </a>
+          <a target="_blank" href="https://facebook.com/cervejababylon">
+            <li><i class="fa fa-facebook"></i><br>Compartilhe</li>
+          </a>
+          <a target="_blank" href="mailto:contato@cervejababylon.com.br">
+            <li><i class="fa fa-envelope-o"></i><br>Escreva</li>
+          </a>              
+        </ul>
+
         <p>© 2016 NORBEV Bebidas</p>
         <p>CNPJ: 03.954.356/0001-52</p>
       </footer>
