--- a/index.html
+++ b/index.html
@@ -52,6 +52,73 @@
     <hr class="hr-small">
 
     <div class="container">
+      <div class="row mb-40 text-center">
+        <h1>Onde encontrar a Babylon German Lager</h1>
+      </div>
+      
+      <div class="row text-center">
+        <div class="col-sm-4 col-xs-12">
+          <div class="card-box">
+            <div class="card-header mc-cf table">
+              <!-- imagem de fundo com foto da babylon no local -->
+              <h2 class="card-title table-cell">
+                Mestre Cervejeiro<br>Casa Forte
+              </h2>
+            </div>
+            <div class="card-body">
+              <div class="card-logo">
+                <img src="imgs/clients/logo-mc-cf.png">
+              </div>
+              <address>
+                Avenida Dezessete de Agosto, 1609
+                Casa Forte, Recife - PE.
+              </address>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <div class="card-box">
+            <div class="card-header mafua table">
+              <!-- imagem de fundo com foto da babylon no local -->
+              <h2 class="card-title table-cell">
+                Mafuá do Januário
+              </h2>
+            </div>
+            <div class="card-body">
+              <div class="card-logo">
+                <img src="imgs/clients/logo-mafua.jpg">
+              </div>
+              <address>
+                Rua Capitão Zurzinha, 184
+                Casa Forte, Recife - PE.
+              </address>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 col-xs-12">
+          <div class="card-box">
+            <div class="card-header cfrios table">
+              <!-- imagem de fundo com foto da babylon no local -->
+              <h2 class="card-title table-cell">
+                Casa dos Frios
+              </h2>
+            </div>
+            <div class="card-body">
+              <div class="card-logo">
+                <img src="imgs/clients/logo-cfrios.png">
+              </div>
+              <address>
+                Avenida Dezessete de Agosto, 1609.
+                Casa Forte, Recife - PE.
+              </address>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="hr-small">
+
+    <div class="container">
       <footer class="text-center">
         
         <ul class="social-links">
