fix endereco casa dos frios

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                 <img src="imgs/clients/logo-cfrios.png">
               </div>
               <address>
-                Avenida Dezessete de Agosto, 1609.
-                Casa Forte, Recife - PE.
+                Av. Rui Barbosa, 412
+                Graças, Recife - PE.
               </address>
             </div>
           </div>
