fix extrabom logo e calculadora

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Cerveja Babylon - Feita em Pernambuco</title>
+    <title>Cervejaria Babylon - Feita em Pernambuco</title>
     <meta name="description" content="A Babylon é uma cervejaria que nasceu para resgatar a tradição das grandes escolas cervejeiras do mundo. Visamos criar cervejas de estilos clássicos, mundialmente famosos, unindo um mestre cervejeiro com experiência em grandes cervejarias com a inovação e criatividade de cervejeiros de panela.">
     <meta name="keywords" content="cerveja artesanal, cervejaria artesanal pernambucana, cervejaria artesanal recifense, babylon german lager, micro-cervejaria recifense, micro-cervejaria pernambucana, recife, babylon, german, lager">
 
@@ -14,6 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/fa-snapchat.css" rel="stylesheet">
+    <link href="css/nexa_font/stylesheet.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
     <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,300|Bitter:400italic' rel='stylesheet' type='text/css'> -->
 
@@ -31,8 +32,9 @@
         <img class="babylon-logo" src="imgs/logo.png" alt="Babylon German Lager">
         
         <div class="chamada">
-          <h2>Cerveja Babylon</h2>
-          <i>Tradição & inovação</i>
+          <h2>Cervejaria Babylon</h2>
+          <i>Receitas do mundo</i><br>
+          <i>Sotaque pernambucano</i>
         </div>
       </div>
     </div>
@@ -53,7 +55,7 @@
 
     <div class="container">
       <div class="row mb-40 text-center">
-        <h1>Onde encontrar a Babylon German Lager</h1>
+        <h1>Onde encontrar a Babylon</h1>
       </div>
       
       <div class="row text-center">
@@ -62,16 +64,16 @@
             <div class="card-header mc-cf table">
               <!-- imagem de fundo com foto da babylon no local -->
               <h2 class="card-title table-cell">
-                Mestre Cervejeiro<br>Casa Forte
+                Grupo Extrabom<br>Supermercados
               </h2>
             </div>
             <div class="card-body">
               <div class="card-logo">
-                <img src="imgs/clients/logo-mc-cf.png">
+                <img src="imgs/clients/logo-extrabom.png">
               </div>
               <address>
-                Avenida Dezessete de Agosto, 1609
-                Casa Forte, Recife - PE.
+                Boa Viagem, Parnamirim, Piedade,
+                Pina, Rosarinho, Setúbal, Torre, etc.
               </address>
             </div>
           </div>
@@ -125,21 +127,18 @@
           <a target="_blank" href="https://instagram.com/cervejababylon">
             <li><i class="fa fa-instagram"></i><br>Curta</li>
           </a>
-          <a target="_blank" href="https://snapchat.com/add/cervejababylon">
-            <li><i class="fa fa-snapchat"></i><br>Acompanhe</li>
-          </a>
           <a target="_blank" href="https://untappd.com/cervejababylon">
             <li><i class="fa fa-beer"></i><br>Brinde</li>
           </a>
           <a target="_blank" href="https://facebook.com/cervejababylon">
             <li><i class="fa fa-facebook"></i><br>Compartilhe</li>
           </a>
-          <a target="_blank" href="mailto:contato@cervejababylon.com.br">
+          <a target="_blank" href="mailto:contato@cervejariababylon.com.br">
             <li><i class="fa fa-envelope-o"></i><br>Escreva</li>
           </a>              
         </ul>
 
-        <p>© 2016 NORBEV Bebidas</p>
+        <p>© 2016-2018 NORBEV Bebidas</p>
         <p>CNPJ: 03.954.356/0001-52</p>
       </footer>
     </div>
