--- a/chopp-calc.html
+++ b/chopp-calc.html
@@ -11,11 +11,11 @@
 
 
     <!-- Bootstrap -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-    <link href="../css/font-awesome.min.css" rel="stylesheet">
-    <link href="../css/fa-snapchat.css" rel="stylesheet">
-    <link href="../css/nexa_font/stylesheet.css" rel="stylesheet">
-    <link href="../css/custom.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/fa-snapchat.css" rel="stylesheet">
+    <link href="css/nexa_font/stylesheet.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
     <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,300|Bitter:400italic' rel='stylesheet' type='text/css'> -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -29,7 +29,7 @@
   <body>
     <div class="jumbotron mb-40">
       <div class="container text-center">
-        <img class="babylon-logo" src="../imgs/logo.png" alt="Babylon German Lager">
+        <img class="babylon-logo" src="imgs/logo.png" alt="Babylon German Lager">
       </div>
       
       <div class="calculator">
