--- a/chopp-calc.html
+++ b/chopp-calc.html
@@ -120,7 +120,7 @@
         inputBeb = parseInt($('input[name=gridRadios]:checked').val());
 
         // lph = litros por pessoa por hora
-        lph = 0.5
+        lph = 0.5;
 
 
         if(inputQnt * inputHora == 0) {
@@ -144,7 +144,7 @@
           }
 
           if (inputBeb == 1) {
-            k = k * 0.66
+            k = k * 0.66;
           }
 
           if (inputHora >= 4) {
