--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <hr class="hr-small">
 
-    <div class="container">
+    <!--div class="container">
       <div class="row mb-40 text-center">
         <h1>Onde encontrar a Babylon</h1>
       </div>
@@ -62,7 +62,7 @@
         <div class="col-sm-4 col-xs-12">
           <div class="card-box">
             <div class="card-header mc-cf table">
-              <!-- imagem de fundo com foto da babylon no local -->
+              <!-- imagem de fundo com foto da babylon no local >
               <h2 class="card-title table-cell">
                 Grupo Extrabom<br>Supermercados
               </h2>
@@ -77,7 +77,7 @@
               </address>
             </div>
           </div>
-        </div>
+        </div-->
         <div class="col-sm-4 col-xs-12">
           <div class="card-box">
             <div class="card-header mafua table">
