--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="col-sm-4 col-xs-12">
           <div class="card-box">
             <div class="card-header mafua table">
-              <!-- imagem de fundo com foto da babylon no local -->
+              <!-- imagem de fundo com foto da babylon no local >
               <h2 class="card-title table-cell">
                 Mafuá do Januário
               </h2>
@@ -100,7 +100,7 @@
         <div class="col-sm-4 col-xs-12">
           <div class="card-box">
             <div class="card-header cfrios table">
-              <!-- imagem de fundo com foto da babylon no local -->
+              <!-- imagem de fundo com foto da babylon no local >
               <h2 class="card-title table-cell">
                 Casa dos Frios
               </h2>
@@ -117,8 +117,8 @@
           </div>
         </div>
       </div>
-    </div-->
-    <hr class="hr-small">
+    </div>
+    <hr class="hr-small"-->
 
     <div class="container">
       <footer class="text-center">
